# task

./: Procfile  README.md  gateway.py  pyproject.toml
deploy/: dev.env
file_sender_client/: client.py
main/: __init__.py  auth.py  logger.py  settings.py  urls.py  utils.py  views.py
main/file_sender_client/: __init__.py  client.py
store/: Readme.md
